
[package]
name = "mc-storage"
version = "0.1.0"
description = "Starknet storage compatibility layer for Substrate."
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[dependencies]
# Madara runtime
madara-runtime = { workspace = true, default-features = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
mp-api = { workspace = true, default-features = true }

# Madara primitives
mp-blockchain = { workspace = true, default-features = true }
mp-runtime = { workspace = true, default-features = true }
mp-starknet = { workspace = true, default-features = true }

# Madara pallets
pallet-starknet = { workspace = true, default-features = true }

# Substrate client
mc-client-api = { workspace = true, default-features = true }

# Subtrate primitives
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }

# Starknet dependencies
blockifier = { workspace = true, default-features = false }
starknet-core = { workspace = true }

# Third-party dependencies
codec = { workspace = true, default-features = true }
