[package]
name = "mc-transaction-pool"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-blockchain = { workspace = true }
mp-runtime = { workspace = true }

# Madara client
mc-transaction-pool-api = { workspace = true }

# Substrate client
mc-client-api = { workspace = true }
sc-utils = { workspace = true }
 # FIXME: remove completely this dependency and use mc-transaction-pool everywhere
sc-transaction-pool = { workspace = true }

# Substrate primitives
mp-api = { workspace = true }
sp-core = { workspace = true }
sp-tracing = { workspace = true }
mp-transaction-pool = { workspace = true }

# Third party dependencies
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
linked-hash-map = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
prometheus-endpoint = { workspace = true }
codec = { workspace = true, default-features = true }
serde = { workspace = true }
thiserror = { workspace = true }
