[package]
name = "mc-transaction-pool"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-blockchain = { workspace = true, default-features = true }
mp-runtime = { workspace = true, default-features = true }

# Madara client
mc-transaction-pool-api = { workspace = true, default-features = true }

# Substrate client
mc-client-api = { workspace = true, default-features = true }
sc-utils = { workspace = true, default-features = true }
# FIXME: remove completely this dependency and use mc-transaction-pool everywhere
sc-transaction-pool = { workspace = true, default-features = true }

# Substrate primitives
mp-api = { workspace = true, default-features = true }
mp-transaction-pool = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }

# Third party dependencies
async-trait = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true, default-features = true }
futures-timer = { workspace = true, default-features = true }
linked-hash-map = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
num-traits = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
