[package]
name = "frame-support"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Support code for the runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Madara primitives
frame-support-procedural = { version = "4.0.0-dev", default-features = false, path = "./procedural" }
mp-runtime = { workspace = true, default-features = false }

# Substrate primitives
frame-metadata = { version = "15.1.0", default-features = false, features = [
  "v14",
  "v15-unstable",
] }
mp-api = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-core-hashing-proc-macro = { workspace = true, default-features = false }
sp-debug-derive = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

# Third party dependencies
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
scale-info = { workspace = true, default-features = false, features = [
  "derive",
] }
serde = { workspace = true, optional = true, features = [
  "derive",
], default-features = false }

bitflags = { workspace = true, default-features = false }
environmental = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true, default-features = false }
k256 = { workspace = true, default-features = false, features = ["ecdsa"] }
log = { workspace = true, default-features = false }
once_cell = { workspace = true, optional = true, default-features = false }
paste = { workspace = true, default-features = false }
smallvec = { workspace = true, default-features = false }
tt-call = { workspace = true, default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
frame-system = { workspace = true }

[features]
default = ["std"]
std = [
  "sp-core/std",
  "k256/std",
  "once_cell",
  "serde",
  "mp-api/std",
  "sp-io/std",
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "mp-runtime/std",
  "sp-tracing/std",
  "sp-arithmetic/std",
  "frame-metadata/std",
  "sp-inherents/std",
  "sp-staking/std",
  "sp-state-machine/std",
  "sp-weights/std",
  "frame-support-procedural/std",
  "log/std",
  "environmental/std",
]
runtime-benchmarks = [
  "frame-system/runtime-benchmarks",
  "mp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
]
try-runtime = ["sp-debug-derive/force-debug"]
# By default some types have documentation, `no-metadata-docs` allows to reduce the documentation
# in the metadata.
no-metadata-docs = [
  "frame-support-procedural/no-metadata-docs",
  "mp-api/no-metadata-docs",
]
# By default some types have documentation, `full-metadata-docs` allows to add documentation to
# more types in the metadata.
full-metadata-docs = ["scale-info/docs"]
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = ["frame-support-procedural/tuples-96"]
tuples-128 = ["frame-support-procedural/tuples-128"]
