[package]
name = "pallet-starknet"
version = "0.1.0-alpha"
description = "FRAME pallet to execute Starknet contracts."
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
blockifier = { workspace = true, default-features = false, features = [
  "testing",
  "parity-scale-codec",
] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mp-digest-log = { workspace = true, default-features = false }
mp-starknet = { workspace = true, default-features = false }
starknet-crypto = { workspace = true, default-features = false, features = [
  "alloc",
] }
starknet_api = { workspace = true, default-features = false }

# Substrate frame
frame-benchmarking = { workspace = true, optional = true, default-features = false }

# Substrate primitives
mp-api = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
# Frame pallets

# Other third party dependencies
codec = { package = "parity-scale-codec", workspace = true, features = [
  "derive",
], default-features = false }
hex = { workspace = true, default-features = false }
indexmap = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, features = [
  "derive",
], default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false }

[dev-dependencies]
pallet-timestamp = { workspace = true, default-features = false }
pretty_assertions = { workspace = true, default-features = false }
test-case = { version = "3.1.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
hexlit = { version = "0.5.5", default-features = false }
starknet-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  # Substrate
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "mp-runtime/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  "pallet-timestamp/std",
  "sp-inherents/std",
  # Madara
  "mp-starknet/std",
  # Starknet
  "starknet-crypto/std",
  "blockifier/std",
  # Other third party dependencies
  "codec/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
