[package]
name = "mp-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate runtime api primitives"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-api-proc-macro = { version = "4.0.0-dev", path = "proc-macro" }
mp-runtime = { workspace = true }

# Substrate primitives
mp-version = { workspace = true }
sp-core = { workspace = true }
sp-state-machine = { workspace = true, optional = true }
sp-std = { workspace = true }
sp-trie = { workspace = true, default-features = false, optional = true }

# Third party dependencies
codec = { workspace = true, default-features = false }
hash-db = { workspace = true, optional = true }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = [
  "derive",
] }
sp-metadata-ir = { workspace = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
sp-test-primitives = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-core/std",
  "sp-std/std",
  "mp-runtime/std",
  "sp-state-machine/std",
  "sp-trie/std",
  "mp-version/std",
  "hash-db",
  "thiserror",
  "log/std",
  "scale-info/std",
  "sp-metadata-ir/std",
]
# Special feature to disable logging completly.
#
# By default `mp-api` initializes the `RuntimeLogger` for each runtime api function. However,
# logging functionality increases the code size. It is recommended to enable this feature when
# building a runtime for registering it on chain.
#
# This sets the max logging level to `off` for `log`.
disable-logging = ["log/max_level_off"]
# Do not report the documentation in the metadata.
no-metadata-docs = ["mp-api-proc-macro/no-metadata-docs"]
