[package]
name = "mp-block-builder"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "The block builder runtime api."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
 
# Madara primitives
mp-api = { workspace = true }
mp-runtime = {  workspace = true}

# Substrate primitives
sp-inherents = {workspace = true }
sp-std = { workspace = true	}

# Third party dependencies
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"mp-api/std",
	"mp-runtime/std",
	"sp-inherents/std",
	"sp-std/std"
]
