[package]
name = "mp-blockchain"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate blockchain traits and primitives."
documentation = "https://docs.rs/mp-blockchain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Madara primitives
mp-runtime = { workspace = true }
mp-consensus = { workspace = true }

# Substrate primitivemp-api = { workspace = true }
mp-api = { workspace = true }
sp-database = { workspace = true }
sp-state-machine = { workspace = true }

# Third-party dependencies
futures = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
codec = { workspace = true, default-features = false, features = [
  "derive",
] }
thiserror = { workspace = true }
