[package]
name = "mp-blockchain"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate blockchain traits and primitives."
documentation = "https://docs.rs/mp-blockchain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Madara primitives
mp-consensus = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }

# Substrate primitivemp-api = { workspace = true }
mp-api = { workspace = true, default-features = false }
sp-database = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }

# Third-party dependencies
codec = { workspace = true, default-features = false, features = ["derive"] }
futures = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
lru = { workspace = true, default-features = false }
parking_lot = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
