[package]
name = "mp-digest-log"
version = "0.1.0-alpha"
license = "MIT"
description = "Primitives for Madara digest logs"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
mp-starknet = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false }
# Substrate
mp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
assert_matches = {version = "1.5.0", default-features = false }

[features]
default = ["std"]
std = ["mp-starknet/std", "codec/std", "mp-runtime/std"]
