[package]
name = "mp-runtime"
version = "7.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime Modules shared primitive types."
documentation = "https://docs.rs/mp-runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
either = { version = "1.5", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
log = { version = "0.4.17", default-features = false }
paste = { version = "1.0", default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.136", default-features = false, features = [
  "derive",
  "alloc",
], optional = true }
sp-application-crypto = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

[features]
runtime-benchmarks = []
try-runtime = []
default = ["std"]
std = [
  "codec/std",
  "either/use_std",
  "hash256-std-hasher/std",
  "log/std",
  "rand",
  "scale-info/std",
  "serde/std",
  "sp-application-crypto/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "sp-weights/std",
]

# Serde support without relying on std features.
serde = [
  "dep:serde",
  "codec/serde",
  "scale-info/serde",
  "sp-application-crypto/serde",
  "sp-arithmetic/serde",
  "sp-core/serde",
  "sp-weights/serde",
]
