[package]
name = "mc-transaction-pool-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Transaction pool client facing API."

[dependencies]
async-trait = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
serde = { workspace = true, features = ["derive"] }
thiserror = {workspace = true}
mp-blockchain = {workspace = true}
mp-runtime = {workspace = true}

[dev-dependencies]
serde_json = "1.0"
