[package]
name = "mc-transaction-pool-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Transaction pool client facing API."

[dependencies]
async-trait = { workspace = true, default-features = false }
futures = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
mp-blockchain = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
serde_json = { workspace = true, default-features = false }
