[package]
name = "frame-support-procedural"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
Inflector = { workspace = true, default-features = false }
cfg-expr = { workspace = true, default-features = false }
derive-syn-parse = { workspace = true, default-features = false }
frame-support-procedural-tools = { version = "4.0.0-dev", path = "./tools", default-features = false }
itertools = { workspace = true, default-features = false }
proc-macro-warning = { workspace = true, default-features = false }
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, default-features = false }
syn = { workspace = true, features = ["full"], default-features = false }

[features]
default = ["std"]
std = []
no-metadata-docs = []
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = []
tuples-128 = []
