[package]
name = "mp-api-proc-macro"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Macros for declaring and implementing runtime apis."
documentation = "https://docs.rs/mp-api-proc-macro"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
blake2 = { version = "0.10.4", default-features = false }
expander = "1.0.0"
proc-macro-crate = "1.1.3"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.16", features = [
  "full",
  "fold",
  "extra-traits",
  "visit",
] }

[dev-dependencies]
assert_matches = "1.3.0"

[features]
# Required for the doc tests
default = ["std"]
std = []
no-metadata-docs = []
