[package]
name = "mp-api-test"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
mc-block-builder = { version = "0.10.0-dev", path = "../../../client/block-builder" }
mp-api = { version = "4.0.0-dev", path = "../" }
mp-runtime = { version = "7.0.0", path = "../../runtime" }
mp-version = { version = "5.0.0", path = "../../version" }
rustversion = "1.0.6"
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
sp-consensus = { version = "0.10.0-dev", path = "../../consensus/common" }
sp-state-machine = { version = "0.13.0", path = "../../state-machine" }
sp-tracing = { version = "6.0.0", path = "../../tracing" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
trybuild = "1.0.74"

[dev-dependencies]
criterion = "0.4.0"
futures = "0.3.21"
log = "0.4.17"
sp-core = { version = "7.0.0", path = "../../core" }

[[bench]]
name = "bench"
harness = false

# We only need this to generate the correct code.
[features]
default = ["std"]
std = []
