[package]
name = "mp-consensus"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Common utilities for building and using consensus engines in substrate."
documentation = "https://docs.rs/sp-consensus/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-runtime = {workspace = true}

# Substrate primitives
sp-core = {workspace = true}
sp-inherents = {workspace = true}
sp-state-machine = {workspace = true}

# Third party dependencies
async-trait ={workspace = true}
futures = { workspace = true, features = ["thread-pool"] }
log = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
futures = {workspace = true}
sp-test-primitives = {workspace = true}

[features]
default = []
