[package]
name = "mp-consensus"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Common utilities for building and using consensus engines in substrate."
documentation = "https://docs.rs/sp-consensus/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-runtime = { workspace = true, default-features = false }

# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }

# Third party dependencies
async-trait = { workspace = true, default-features = false }
futures = { workspace = true, features = [
  "thread-pool",
], default-features = false }
log = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
futures = { workspace = true, default-features = false }
sp-test-primitives = { workspace = true, default-features = false }

[features]
default = []
