[package]
name = "frame-support-procedural-tools"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Proc macro helpers for procedural macros"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support-procedural-tools-derive = { version = "3.0.0", path = "./derive", default-features = false }
proc-macro-crate = { workspace = true, default-features = false }
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, default-features = false }
syn = { workspace = true, features = [
  "full",
  "visit",
  "extra-traits",
], default-features = false }
