[package]
name = "frame-support-procedural-tools-derive"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Use to derive parsing for parsing struct."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, features = [
  "proc-macro",
], default-features = false }
syn = { workspace = true, features = [
  "proc-macro",
  "full",
  "extra-traits",
  "parsing",
], default-features = false }
